fix: release page top margin on mobile

--- a/src/components/release_page/release_page.scss
+++ b/src/components/release_page/release_page.scss
@@ -3,6 +3,9 @@ $size: 320px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  @include mobile {
+    margin-top: $spacing / 2;
+  }
   .container {
     position: relative;
   }
